--- a/_config.yml
+++ b/_config.yml
@@ -38,11 +38,11 @@ social:
   email: nemzyxt@gmail.com # change to your email address
   links:
     # The first element serves as the copyright owner's link
+    - https://www.linkedin.com/in/nemuel-wainaina
     - https://twitter.com/nemuelwainaina # change to your twitter homepage
     - https://github.com/nemzyxt # change to your github homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
-    - https://www.linkedin.com/in/nemuel-wainaina
 
 google_site_verification: # fill in to your verification string
 
@@ -66,7 +66,7 @@ goatcounter:
 #     light  - Use the light color scheme
 #     dark   - Use the dark color scheme
 #
-theme_mode: # [light | dark]
+theme_mode: dark # [light | dark]
 
 # The CDN endpoint for images.
 # Notice that once it is assigned, the CDN url
@@ -76,11 +76,11 @@ theme_mode: # [light | dark]
 img_cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar:
+avatar: 'assets/images/perfect.jpeg'
 
 # The URL of the site-wide social preview image used in SEO `og:image` meta tag.
 # It can be overridden by a customized `page.image` in front matter.
-social_preview_image: # string, local or CORS resources
+social_preview_image: assets/images/perfect.jpeg # string, local or CORS resources
 
 # boolean type, the global switch for TOC in posts.
 toc: true
