--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ timezone:
 
 title: Nemuel # the main title
 
-tagline: Security Engineer # it will display as the sub-title
+tagline: Security Researcher # it will display as the sub-title
 
 description: >- # used by seo meta and the atom feed
   A minimal, responsive and feature-rich Jekyll theme for technical writing.
@@ -76,11 +76,11 @@ theme_mode: dark # [light | dark]
 img_cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar: 'assets/images/perfect.jpeg'
+avatar: 'assets/images/profile.jpeg'
 
 # The URL of the site-wide social preview image used in SEO `og:image` meta tag.
 # It can be overridden by a customized `page.image` in front matter.
-social_preview_image: assets/images/perfect.jpeg # string, local or CORS resources
+social_preview_image: assets/images/profile.jpeg # string, local or CORS resources
 
 # boolean type, the global switch for TOC in posts.
 toc: true
